@@ -483,6 +483,7 @@ wxMSW:
   accurately represents what will be printed. This fixes wxHtmlEasyPrinting
   preview inaccuracies on Windows; on other platforms, native preview
   should be used.
+- Implement wxFileName::SetTimes() for directories (Steve Lamerton).
 
 wxX11:
 
